# fastapi_sqlalchemy

./: pyproject.toml
fastapi-sqlalchemy/api/: tree.py
