[tool.poetry]
name = "fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["uuip <uuip@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = ">=73.0.1"

sqlalchemy = { extras = ["asyncio"], version = "^2.0.32" }
fastapi-slim  = "^0.112.2"
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
tzdata = { version = "^2024.1", markers = "platform_system == 'Windows'" }
uvloop = { version = "^0.20.0", markers = "platform_system != 'Windows'" }
psycopg = {extras = ["binary"], version = "^3.2.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
alembic = "^1.13.2"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
